examples/test/testpolicy997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy997
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key25: value27
      key33: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value0
          key43: value20
      podSelector:
        matchLabels:
          key43: value37
